# order

./: .gitignore  .order.cabal.~undo-tree~  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.edkmett  README.md  cabal.haskell-ci  default.nix  order.cabal
.github/: mergify.yml
.github/workflows/: .haskell-ci.yml.~undo-tree~  haskell-ci.yml
src/Data/: .Semilattice.hs.~undo-tree~  Band.hs  Boolean.hs  Frame.hs  Heyting.hs  Lattice.hs  Semilattice.hs
src/Data/Band/: Rectangular.hs
src/Data/Boolean/: Generalized.hs
src/Data/Lattice/: Bounded.hs  Complete.hs  Distributive.hs  Modular.hs
src/Data/Order/: .Bounded.hs.~undo-tree~  Bounded.hs  Classes.hs  Complete.hs  Directed.hs  Direction.hs  Linear.hs  Partial.hs  Pre.hs  Quasi.hs  Total.hs  Well.hs
src/Order/: Complete.hs  Direction.hs  Linear.hs  Partial.hs  Pre.hs  Quasi.hs  Total.hs  Well.hs
src/Order/Eq/: Partial.hs
