cabal-version:   2.2

name:            order
version:         0
synopsis:        Order-theory
description:     Order theory for the working Haskell programmer
bug-reports:     https://github.com/emilypi/order
license:         BSD-3-Clause
license-file:    LICENSE
author:          Emily Pillmore, Siddharth Bhat, davean
maintainer:      emilypi@cohomolo.gy, siddu.druid@gmail.com, davean@xkcd.com
copyright:       2020 (c) Emily Pillmore <emilypi@cohomolo.gy>, Siddharth Bhat, davean, 2018 Edward A. Kmett
category:        Order, Algebra, Relational Calculus
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:     GHC ==8.8.4 || ==8.10.3 || ==9.0.1

source-repository head
  type:     git
  location: https://github.com/emilypi/order.git

common base
  default-language: Haskell2010
  build-depends:
      array      ^>= 0.5
    , base        >=4.10 && <5
    , containers  >=0.5  && <0.7
    , ghc-prim    >=0.5.1.0 && <0.8

library
  import: base
  hs-source-dirs:   src
  exposed-modules:
--    Data.Band
--    Data.Band.Rectangular
--    Data.Boolean
--    Data.Boolean.Generalized
--    Data.Frame
    Data.Heyting
    Data.Lattice
--    Data.Lattice.Bounded
--    Data.Lattice.Complete
    Data.Lattice.Distributive
--    Data.Lattice.Modular
    Data.Semilattice
    Data.Order.Bounded
--    Data.Order.Direction
--    Data.Order.Linear
    Data.Order.Partial
    Data.Order.Complete
    Data.Order.Pre
--    Data.Order.Quasi
--    Data.Order.Total
--    Data.Order.Well
