cabal-version:   3.4

name:            order
version:         0.1.0.0
synopsis:        Order-theory
description:     Order theory for the working Haskell programmer
bug-reports:     https://github.com/emilypi/order
license:         BSD-3-Clause
license-file:
  LICENSE
  LICENSE.edkmett
author:          Emily Pillmore, Siddharth Bhat, davean
maintainer:      emilypi@cohomolo.gy, davean@xkcd.com
copyright:       2020-2023 (c) Emily Pillmore <emilypi@cohomolo.gy>, Siddharth Bhat, davean, 2018 Edward A. Kmett
category:        Order, Algebra, Relational Calculus
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.7
   || ==9.6.2

source-repository head
  type:     git
  location: https://github.com/emilypi/order.git

common base
  default-language: Haskell2010
  build-depends:
      array      ^>= 0.5
    , base        >=4.10 && <5
    , containers  >=0.5  && <0.7
    , ghc-prim    >=0.5.1.0 && <0.11

library
  import: base
  hs-source-dirs:   src
  exposed-modules:
    Data.Band
    Data.Band.Rectangular
--    Data.Boolean
--    Data.Boolean.Generalized
--    Data.Frame
    Data.Heyting
    Data.Lattice
    Data.Lattice.Distributive
--    Data.Lattice.Modular
    Data.Semilattice
    Data.Order.Bounded
    Data.Order.Directed
--    Data.Order.Linear
    Data.Order.Partial
    Data.Order.Complete
    Data.Order.Pre
--    Data.Order.Quasi
--    Data.Order.Total
--    Data.Order.Well
